# pgolegaonkar

./: Assignment1_Report.docx  User_Manual.docx
.~/: myRAMBench.c  runall2.slurm
.~/memory/: config12.slurm  config13.slurm  config14.slurm  config16.slurm  config22.slurm  config24.slurm  config4.slurm  config5.slurm  myRAMBench
Benchmark/iperf3/: TCPTest
Benchmark/ping/: ping1
ClusterCode/: .bash_history  .viminfo  Assignment1_Report.docx  User_Manual.docx
ClusterCode/.~/: .runall.slurm.swp  create_slurms
ClusterCode/cpu/: .MyCPUBench.c.swp  DP1.out  DP4.out  HP1.out  HP2.out  (+16 more)
ClusterCode/network/: CMakeCache.txt  CMakeLists.txt  Client.c  ClientServer.c  Makefile  README.rtf  Server  Server.c  cmake_install.cmake  create_client_slurms  create_server_slurms
ClusterCode/network/output/: .memory-RWR-1-1thread.out.dat.swn  .memory-RWR-1-1thread.out.dat.swo
cpu/: DP2.out  HP4.out  MyCPUBench.c  QP4.out  cpu10.slurm  cpu11.slurm  cpu12.slurm  cpu8.slurm  create_slurms  runall1.slurm  slurm-15838.out
disk/: Makefile  WS110000000.out  WS2100000.out  WS4100000.out  a.out  disk1.slurm  disk12.slurm  disk13.slurm  disk14.slurm  disk2.slurm  disk20.slurm  disk21.slurm  disk22.slurm  disk24.slurm  disk28.slurm  disk29.slurm  disk32.slurm  disk34.slurm  disk36.slurm  disk8.slurm  disk9.slurm  runall2.slurm  runall3.slurm  slurm-14144.out
memory/: RWR41000000.out  RWS11000.out  RWS41.out  RWS41000000.out  memory10.slurm  memory11.slurm  memory15.slurm  memory18.slurm  memory4.slurm  memory5.slurm  runall3.slurm  slurm-15432.out
network/: Client  ClientServer.h
(+245 files in other folders)
